--- a/client/index.html
+++ b/client/index.html
@@ -22,5 +22,46 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Mayank Kumar - Movie Data</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <form class="d-flex" id="searchForm">
+            <input
+              class="form-control me-2"
+              id="title"
+              type="search"
+              placeholder="Title (case sensitive)"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+            <button
+              class="btn btn-outline-success"
+              id="clearForm"
+              type="submit"
+            >
+              Clear
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
