--- a/client/index.html
+++ b/client/index.html
@@ -63,5 +63,24 @@
         </div>
       </div>
     </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <table class="table" id="moviesTable">
+            <thead>
+              <tr>
+                <td>Year</td>
+                <td>Title</td>
+                <td>Plot</td>
+                <td>Rating</td>
+                <td>Run Time</td>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
