Add pagination nav

--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,29 @@
             </thead>
             <tbody></tbody>
           </table>
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  id="previous-page"
+                  href="#"
+                  aria-label="Previous"
+                >
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item" id="current-page">
+                <a class="page-link" href="#"></a>
+              </li>
+
+              <li class="page-item" id="previous-page">
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
