Add function for pagination buttons and search

--- a/client/index.html
+++ b/client/index.html
@@ -95,7 +95,7 @@
                 <a class="page-link" href="#"></a>
               </li>
 
-              <li class="page-item" id="previous-page">
+              <li class="page-item" id="next-page">
                 <a class="page-link" href="#" aria-label="Next">
                   <span aria-hidden="true">&raquo;</span>
                 </a>
