--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mayank Kumar - Movie Data</a>
+        <a class="navbar-brand" href="#">Datmehar Singh - Movie Data</a>
         <button
           class="navbar-toggler"
           type="button"
